<resources>
    <string name="app_name">CalcKalla</string>
    <string name="home_page">Home Page</string>
    <string name="calculator">Calculator</string>
    <string name="tip_calc">Calculate Tip</string>
    <string name="geometry">Geometry</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_basic_calc">BasicCalc</string>
    <string name="title_activity_geometry">Geometry</string>
    <string name="title_activity_triangle">Triangle</string>
    <string name="title_activity_square">Square</string>
    <string name="title_activity_rectangle">Rectangle</string>
    <string name="title_activity_rhombus">Rhombus</string>
    <string name="title_activity_parallelogram">Parallelogram</string>
    <string name="title_activity_trapezoid">Trapezoid</string>
    <string name="title_activity_kite">Kite</string>
    <string name="title_activity_hexagon">Hexagon</string>
    <string name="title_activity_pentagon">Pentagon</string>
    <string name="title_activity_octagon">Octagon</string>
    <string name="title_activity_heptagon">Heptagon</string>
    <string name="title_activity_nonagon">Nonagon</string>
    <string name="title_activity_decagon">Decagon</string>
    <string name="title_activity_circle">Circle</string>
    <string name="title_activity_eclipse">Ellipse</string>
    <string name="title_activity_cresent">Cresent</string>
    <string name="title_activity_cube">Cube</string>
    <string name="title_activity_cuboid">Cuboid</string>
    <string name="title_activity_sphere">Sphere</string>
    <string name="title_activity_cylinder">Cylinder</string>
    <string name="title_activity_cone">Cone</string>
    <string name="title_activity_quadrilatreral">Quadrilatreral</string>
    <string name="title_activity_polygon">Polygon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_acute_triangle">Acute Triangle</string>
    <string name="title_activity_right_triangle">Right Triangle</string>
    <string name="title_activity_obtuse_triangle">ObtuseTriangle</string>
    <string name="title_activity_equilateral_triangle">Equilateral Triangle</string>
    <string name="title_activity_isosceles_triangle">Isosceles Triangle</string>
    <string name="title_activity_scalene_triangle">Scalene Triangle</string>
    <string name="title_activity_regular_hexagon">RegularHexagon</string>
    <string name="title_activity_irregular_hexagon">IrregularHexagon</string>
    <string name="title_activity_concave_hexagon">ConcaveHexagon</string>
    <string name="title_activity_convex_hexagon">ConvexHexagon</string>
    <string name="title_activity_regular_pentagon">RegularPentagon</string>
    <string name="title_activity_irregular_pentagon">IrregularPentagon</string>
    <string name="title_activity_regular_octagon">RegularOctagon</string>
    <string name="title_activity_irregular_octagon">IrregularOctagon</string>
    <string name="title_activity_convex_octagon">ConvexOctagon</string>
    <string name="title_activity_regular_heptagon">RegularHeptagon</string>
    <string name="title_activity_irregular_heptagon">IrregularHeptagon</string>
    <string name="title_activity_regular_nonagon">RegularNonagon</string>
    <string name="title_activity_irregular_nonagon">IrregularNonagon</string>
    <string name="title_activity_regular_decagon">RegularDecagon</string>
    <string name="title_activity_irregular_decagon">IrregularDecagon</string>
    <string name="title_activity_convex_polygon">ConvexPolygon</string>
    <string name="title_activity_concave_polygon">ConcavePolygon</string>
    <string name="title_activity_regular_polygon">RegularPolygon</string>
    <string name="area">Area</string>
    <string name="calculate">Calculate</string>
    <string name="circle_image">Circle Image</string>
    <string name="circle_area_formula">Area Formula</string>
    <string name="circle_diameter_formula">Diameter Formula</string>
    <string name="circle_circum_formula">Circumference Formula</string>
    <string name="circle_radius_formula">Radius Formula</string>
    <string name="cone_image">Cone Image</string>
    <string name="cone_volume_formula">Volume Formula</string>
    <string name="cone_radius_formula">Radius Formula</string>
    <string name="cone_height_formula">Height Formula</string>
    <string name="cone_slant_height_formula">Slant Height Formula</string>
    <string name="cone_surface_area_formula">Surface Area Formula</string>
    <string name="cone_base_area_formula">Base Area Formula</string>
    <string name="cone_lateral_surface_formula">Lateral Surface Formula</string>
    <string name="cube_image">Cube Image</string>
    <string name="cube_volume_formula">Volume Formula</string>
    <string name="cube_edge_formula">Edge Formula</string>
    <string name="cube_special_diagonal_formula">Special Diagonal Formula</string>
    <string name="cube_surface_area_formula">Surface Area Formula</string>
    <string name="cuboid_image">Cuboid Image</string>
    <string name="cuboid_volume_formula">Volume Formula</string>
    <string name="cuboid_area_formula">Area Formula</string>
    <string name="cylinder_image">Cylinder Image</string>
    <string name="cylinder_volume_formula">Volume Formula</string>
    <string name="cylinder_radius_formula">Radius Formula</string>
    <string name="cylinder_height_formula">Height Formula</string>
    <string name="cylinder_surface_area_formula">Surface Area Formula</string>
    <string name="cylinder_base_area_formula">Base Area Formula</string>
    <string name="cylinder_lateral_surface_formula">Lateral Surface Formula</string>
    <string name="decagon_image">Decagon Image</string>
    <string name="decagon_area_formula">Area Formula</string>
    <string name="decagon_perimeter_formula">Perimeter Formula</string>
    <string name="decagon_side_formula">Side Formula</string>
    <string name="ellipse_image">Ellipse Image</string>
    <string name="ellipse_volume_formula">Volume Formula</string>
    <string name="ellipse_axis_formula">A-xis Formula</string>
    <string name="ellipse_bxis_formula">B-xis Formula</string>
    <string name="ellipse_circum_formula">Circumference Formula</string>
    <string name="heptagon_image">Heptagon Image</string>
    <string name="heptagon_perimeter_formula">Perimeter Formula</string>
    <string name="heptagon_area_formula">Area Formula</string>
    <string name="heptagon_side_a_formula">Side A Formula</string>
    <string name="hexagon_image">Heptagon Image</string>
    <string name="hexagon_perimeter_formula">Perimeter Formula</string>
    <string name="hexagon_area_formula">Area Formula</string>
    <string name="hexagon_side_a_formula">Side A Formula</string>
    <string name="kite_image">Kite Image</string>
    <string name="kite_perimeter_formula">Perimeter Formula</string>
    <string name="kite_area_formula">Area Formula</string>
    <string name="kite_side_a_formula">Side A Formula</string>
    <string name="kite_side_b_formula">Side B Formula</string>
    <string name="kite_diagonal_p_formula">Diagonal P Formula</string>
    <string name="kite_diagonal_q_formula">Diagonal Q Formula</string>
    <string name="nonagon_image">Nonagon Image</string>
    <string name="nonagon_perimeter_formula">Perimeter Formula</string>
    <string name="nonagon_area_formula">Area Formula</string>
    <string name="nonagon_side_a_formula">Side A Formula</string>
    <string name="octagon_image">Octagon Image</string>
    <string name="octagon_perimeter_formula">Perimeter Formula</string>
    <string name="octagon_area_formula">Area Formula</string>
    <string name="octagon_side_a_formula">Side A Formula</string>
    <string name="parallelogram_image">Parallelogram Image</string>
    <string name="parallelogram_perimeter_formula">Perimeter Formula</string>
    <string name="parallelogram_area_formula">Area Formula</string>
    <string name="parallelogram_base_formula">Base Formula</string>
    <string name="parallelogram_height_formula">Height Formula</string>
    <string name="parallelogram_side_formula">Side Formula</string>
    <string name="pentagon_image">Pentagon Image</string>
    <string name="pentagon_perimeter_formula">Perimeter Formula</string>
    <string name="pentagon_area_formula">Area Formula</string>
    <string name="pentagon_side_a_formula">Side A Formula</string>
    <string name="rectangle_image">Rectangle Image</string>
    <string name="rectangle_perimeter_formula">Perimeter Formula</string>
    <string name="rectangle_area_formula">Area Formula</string>
    <string name="rectangle_length_formula">Length Formula</string>
    <string name="rectangle_width_formula">Width Formula</string>
    <string name="rectangle_diagonal_formula">Diagonal Formula</string>
    <string name="rhombus_image">Rhombus Image</string>
    <string name="rhombus_perimeter_formula">Perimeter Formula</string>
    <string name="rhombus_area_formula">Area Formula</string>
    <string name="rhombus_side_formula">Side Formula</string>
    <string name="rhombus_diagonal_q_formula">Diagonal (Q) Formula</string>
    <string name="rhombus_diagonal_p_formula">Diagonal (P) Formula</string>
    <string name="square_image">Square Image</string>
    <string name="square_perimeter_formula">Perimeter Formula</string>
    <string name="square_area_formula">Area Formula</string>
    <string name="square_side_formula">Side Formula</string>
    <string name="square_diagonal_formula">Diagonal (Q) Formula</string>
    <string name="trapezoid_image">Trapezoid Image</string>
    <string name="trapezoid_perimeter_formula">Perimeter Formula</string>
    <string name="trapezoid_area_formula">Area Formula</string>
    <string name="trapezoid_height_formula">Height Formula</string>
    <string name="trapezoid_base_a_formula">Base A Formula</string>
    <string name="trapezoid_base_b_formula">Base B Formula</string>
    <string name="trapezoid_side_c_formula">Side C Formula</string>
    <string name="trapezoid_side_d_formula">Side D Formula</string>
    <string name="perimeter">Perimeter</string>
    <string name="length">Length</string>
    <string name="diagonal">Diagonal</string>
    <string name="width">Width</string>
    <string name="radius">Radius</string>
    <string name="diameter">Diameter</string>
    <string name="circum">Circumference</string>
    <string name="volume">Volume</string>
    <string name="height">Height</string>
    <string name="slant_height">Slant Height</string>
    <string name="surface_area">Surface Area</string>
    <string name="base_area">Base Area</string>
    <string name="lateral_surface">Lateral Surface</string>
    <string name="edge">Edge</string>
    <string name="special_diagonal">Speical Diagonal</string>
    <string name="side">Side</string>
    <string name="axis">Axis</string>
    <string name="a_xis_text">A-xis</string>
    <string name="b_xis_text">B-xis</string>
    <string name="side_a">Side A</string>
    <string name="side_b">Side B</string>
    <string name="diagonal_p">Diagonal (P)</string>
    <string name="diagonal_q">Diagonal (Q)</string>
    <string name="base">Base</string>
    <string name="hyp">Hypotenuse</string>
    <string name="base_a">Base A</string>
    <string name="base_b">Base B</string>
    <string name="side_c">Side C</string>
    <string name="side_d">Side D</string>
    <string name="letter_l">L</string>
    <string name="letter_w">W</string>
    <string name="letter_p">P</string>
    <string name="letter_r">r</string>
    <string name="letter_a">A</string>
    <string name="letter_v">V</string>
    <string name="letter_h">h</string>
    <string name="letter_b">b</string>
    <string name="letter_q">q</string>
    <string name="letter_c">c</string>
    <string name="letter_d">d</string>
    <string name="superscript"><html><i>a</i><sup>2</sup>+<i>y</i><sup>2</sup></html></string>
    <string name="subscript"><html>f(x)<sub>1+x</sub></html></string>
</resources>