<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cfcfc4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="calcpa.calcsummerproject.Geometry.Pentagon.Pentagon"
    tools:showIn="@layout/activity_pentagon">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pen_perimeter_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/perimeter"
            android:textColor="@color/Black"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/pen_perimeter_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pen_perimeter_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:src="@drawable/pentagon_xxxhdpi"
            android:contentDescription="@string/pentagon_image"/>
        <ImageView
            android:id="@+id/pen_perimeter_formula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pen_perimeter_img"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:src="@drawable/pentagon_perimeter_xxxhdpi"
            android:contentDescription="@string/pentagon_perimeter_formula"/>




        <TextView
            android:id="@+id/pen_perimeter_side_a_text"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/pen_perimeter_formula"
            android:layout_marginTop="11dp"
            android:background="@drawable/red_button"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/letter_a"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/pen_perimeter_side_a_et"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@id/pen_perimeter_formula"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/pen_perimeter_side_a_text"
            android:layout_toEndOf="@+id/pen_perimeter_side_a_text"
            android:background="@drawable/black_button"
            android:ems="6"
            android:hint="@string/side"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/LightGrey" />

        <Button
            android:id="@+id/pen_perimeter_calc_button"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@id/pen_perimeter_side_a_et"
            android:layout_marginTop="5dp"
            android:background="@drawable/black_button"
            android:gravity="center"
            android:text="@string/calculate"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/pen_perimeter_calc_answer_tx"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@+id/pen_perimeter_calc_button"
            android:layout_marginTop="5dp"
            android:background="@drawable/black_button"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="21sp" />


        <Button
            android:id="@+id/pen_perimeter_clear_button"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@id/pen_perimeter_calc_answer_tx"
            android:layout_marginTop="5dp"
            android:background="@drawable/black_button"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textSize="13sp" />


        <TextView
            android:id="@+id/hline_1"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pen_perimeter_clear_button"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/pen_area_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hline_1"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/area"
            android:textColor="@color/Black"
            android:textSize="30sp" />


        <ImageView
            android:id="@+id/pen_area_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pen_area_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:src="@drawable/pentagon_xxxhdpi"
            android:contentDescription="@string/pentagon_image"/>
        <ImageView
            android:id="@+id/pen_area_formula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pen_area_img"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:src="@drawable/pentagon_area_xxxhdpi"
            android:contentDescription="@string/pentagon_area_formula"/>



        <TextView
            android:id="@+id/pen_area_side_a_tx"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/pen_area_formula"
            android:layout_marginTop="11dp"
            android:background="@drawable/red_button"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/letter_a"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/pen_area_side_a_et"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@id/pen_area_formula"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10sp"
            android:layout_toRightOf="@+id/pen_area_side_a_tx"
            android:layout_toEndOf="@+id/pen_area_side_a_tx"
            android:background="@drawable/black_button"
            android:ems="6"
            android:hint="@string/side"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/LightGrey" />

        <Button
            android:id="@+id/pen_area_calc_button"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@id/pen_area_side_a_et"
            android:layout_marginTop="5dp"
            android:background="@drawable/black_button"
            android:text="@string/calculate"
            android:textColor="@color/white"
            android:textSize="13sp" />


        <TextView
            android:id="@+id/pen_area_calc_answer_tx"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@+id/pen_area_calc_button"
            android:layout_marginTop="5dp"
            android:background="@drawable/black_button"
            android:gravity="center"
            android:textColor="@color/White"
            android:textSize="21sp" />

        <Button
            android:id="@+id/pen_area_clear_button"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@id/pen_area_calc_answer_tx"
            android:layout_marginTop="5dp"
            android:background="@drawable/black_button"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textSize="13sp" />


        <TextView
            android:id="@+id/hline_2"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pen_area_clear_button"
            android:layout_marginTop="5dp" />


        <TextView
            android:id="@+id/pen_side_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hline_2"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/side_a"
            android:textColor="@color/Black"
            android:textSize="30sp" />


        <ImageView
            android:id="@+id/pen_side_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pen_side_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:src="@drawable/pentagon_xxxhdpi"
            android:contentDescription="@string/pentagon_image"/>
        <ImageView
            android:id="@+id/pen_side_formula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pen_side_img"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:src="@drawable/pentagon_sides_xxxhdpi"
            android:contentDescription="@string/pentagon_side_a_formula"/>


        <TextView
            android:id="@+id/pen_side_tx"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/pen_side_formula"
            android:layout_marginTop="11dp"
            android:background="@drawable/red_button"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/letter_a"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <EditText
            android:id="@+id/pen_side_et"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@id/pen_side_formula"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/pen_side_tx"
            android:layout_toEndOf="@+id/pen_side_tx"
            android:background="@drawable/black_button"
            android:ems="6"
            android:hint="@string/side"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/LightGrey" />


        <Button
            android:id="@+id/pen_side_calc_button"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@id/pen_side_et"
            android:layout_marginTop="5dp"
            android:background="@drawable/black_button"
            android:text="@string/calculate"
            android:textColor="@color/white"
            android:textSize="13sp" />


        <TextView
            android:id="@+id/pen_side_calc_answer_tx"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@+id/pen_side_calc_button"
            android:layout_marginTop="5dp"
            android:background="@drawable/black_button"
            android:gravity="center"
            android:textColor="@color/White"
            android:textSize="21sp" />


        <Button
            android:id="@+id/pen_side_clear_button"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@id/pen_side_calc_answer_tx"
            android:layout_marginTop="5dp"
            android:background="@drawable/black_button"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textSize="13sp" />


        <TextView
            android:id="@+id/hline_3"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pen_side_clear_button"
            android:layout_marginTop="5dp" />
    </RelativeLayout>


</ScrollView>
 